--- a/style.css
+++ b/style.css
@@ -111,3 +111,42 @@
         grid-template-columns: repeat(2, 1fr);
     }
 }
+
+/* section comment 2 */
+.lover-item nav {
+    margin: 0;
+    padding: 0;
+    border-radius: 10px;
+    border-color: #E95A08;
+    margin-left: 700px;
+    margin-top: 500px;
+}
+.nav-style {
+    display: flex;
+    gap: 400px;
+    width: 2400px;
+    height: 800px;
+}
+.h1-title h1 {
+    font-size: 150px;
+}
+.h1-title ul {
+    font-size: 47px;
+}
+.img-title {
+    margin-top: 10px;
+    position: relative;
+}
+.badge-item {
+    object-fit: cover;
+    display: block;
+    margin-top: 250px;
+    margin-right: 250px;
+
+}
+.badge {
+    position: absolute;
+    top: 0.05px;
+    right: 0.05px;
+    z-index: 2;
+}
