--- a/style.css
+++ b/style.css
@@ -293,3 +293,21 @@
     position: relative;
     text-align: center;
 }   
+
+
+.homes-item {
+    display: flex;
+    justify-content: space-around;
+    gap: 20px;
+    font-size: 50px;
+}
+.src-item {
+    gap: 40px;
+}
+
+.your-item {
+    border: 60px;
+    border-radius: 10px;
+    padding: 40px 60px;
+}
+
